# Autonomous_Navigation_System

./: .gitignore  README.md  init_can.sh  start.sh
global_navigation_launch/: CMakeLists.txt  package.xml
global_navigation_launch/config/: localization.yaml  map_params.yaml  params.yaml  (+1 more)
lidar_imu_sync/: CMakeLists.txt  package.xml
lidar_imu_sync/launch/: imu_lidar.launch.py
lidar_imu_sync/src/: LidarImuSync.cpp
lidar_path_to_odom/: CMakeLists.txt  package.xml
map_visualizer/: CMakeLists.txt
pointcloud_rotation/: CMakeLists.txt  package.xml
pointcloud_rotation/config/: params.yaml
pointcloud_rotation/include/: pointcloud_rotation_node.h
pointcloud_rotation/launch/: lidar_rotation.launch.py
pointcloud_rotation/src/: pointcloud_rotation_node.cpp
rviz_overlay_plugin/: CMakeLists.txt  package.xml
rviz_overlay_plugin/plugins/: plugin_description.xml
rviz_overlay_plugin/src/: overlay_display.cpp
sdv_control_and_msgs/sdv_can/: CMakeLists.txt  README.md  package.xml
sdv_control_and_msgs/sdv_can/config/: can_params.yaml
sdv_control_and_msgs/sdv_can/launch/: can_devices.launch.py  panel.launch.py  remote_steer.launch.py
sdv_control_and_msgs/sdv_can/libs/vanttec_CANLib/platform_specific/vanttec_canlib_stm/: ping_task.c  vanttec_canlib.c  vanttec_canlib.h  vanttec_canlib_rx_task.c  vanttec_canlib_tx_task.c
sdv_control_and_msgs/sdv_can/libs/vanttec_CANLib/src/Vanttec_CANLib/: CANMessage.cpp  CANMessage.h
sdv_control_and_msgs/sdv_can/libs/vanttec_CANLib/src/Vanttec_CANLib/ByteOrder/: inet.cpp
sdv_control_and_msgs/sdv_can/libs/vanttec_CANLib/src/Vanttec_CANLib/Utils/: CANDeserialization.cpp  CANSerialization.cpp
sdv_control_and_msgs/sdv_can/resources/: panel_functionalities.json
sdv_control_and_msgs/sdv_can/scripts/: encoder_briter.py  encoder_rm8004.py  heartbeat_node.py  panel_modulev2.py  remote2can.py  speech.py
sdv_control_and_msgs/sdv_can/src/: can_node_base.cpp  can_node_base.h  can_node_sdv.cpp
sdv_control_and_msgs/sdv_control/: CMakeLists.txt  README.md  package.xml
sdv_control_and_msgs/sdv_control/config/: anniversary_waypoints_ned.csv  car_params.yaml  el_borrego.csv  new_waypoints_1.csv  new_waypoints_3.csv  parking_waypoints_ned.csv  sim2.csv  sim3.csv  sim_params.yaml  sim_waypoints.csv  waypoints_carreta.csv  zf_estacionamiento.csv  zf_parking.csv  zf_street.csv  zigzag.csv
sdv_control_and_msgs/sdv_control/include/sdv_control/: controllers_merge.hpp  visibility_control.h
sdv_control_and_msgs/sdv_control/launch/: control_launch.py  guidance_launch.py  gz_sim_launch.py  lat_control_launch.py  longitudinal_control_launch.py  model_launch.py  sim_launch.py
sdv_control_and_msgs/sdv_control/launch/rviz_cfg/: sdv_sim_wpnts.rviz
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/: .gitignore  CMakeLists.txt
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/.github/workflows/: cmake_build.yaml
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/controllers/control_laws/SMC/ASMC/first_order/: asmc.hpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/controllers/control_laws/SMC/tocheckANTSMC/: antsmc.cpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/controllers/feedback_linearization/SMC_based/ASMC/tochecksecond_order/: 6dof_asmc.hpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/controllers/feedback_linearization/SMC_based/tocheckANTSMC/: 6dof_antsmc.hpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/controllers/guidance_laws/: stanley_controller.cpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/src/controllers/control_laws/PID/first_order/: pid.cpp  pid.hpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/src/controllers/control_laws/SMC/AITSMC/first_order/: aitsmc.cpp  aitsmc.hpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/src/controllers/control_laws/SMC/ASMC/first_order/: asmc.cpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/src/controllers/control_laws/SMC/ASMC/second_order/: asmc.cpp  asmc.hpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/src/controllers/control_laws/SMC/tocheckANTSMC/: antsmc.hpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/src/controllers/feedback_linearization/PID_based/first_order/: fblin_pid.cpp  fblin_pid.hpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/src/controllers/feedback_linearization/model_based_controllers/SDCs/regulators/: vtec_sdc1_pid.cpp  vtec_sdc1_pid.hpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/src/controllers/guidance_laws/: stanley_controller.cpp  stanley_controller.hpp
sdv_control_and_msgs/sdv_control/libs/vanttec_controllers/tests/controllers/control_laws/: pid_test.cpp
sdv_control_and_msgs/sdv_control/rviz/: sim.rviz
sdv_control_and_msgs/sdv_control/scripts/: path_planner_node.py  path_publisher_node.py  waypoint_handler.py
sdv_control_and_msgs/sdv_control/src/control/guidance_laws/: los_controller_node.cpp  stanley_controller_node.cpp
sdv_control_and_msgs/sdv_control/src/control/regulators/first_order/: sdc1_vel_aitsmc_node.cpp  sdc1_vel_asmc_node.cpp  sdc1_vel_pid_node.cpp  vel_pid_node.cpp  velocity_regulator_node.cpp
sdv_control_and_msgs/sdv_control/src/model/: car_tf2_broadcast_node.cpp  sdc1_simulation_node.cpp  sdv_kinematic_sim_node.cpp
sdv_control_and_msgs/sdv_msgs/: CMakeLists.txt  package.xml
sdv_control_and_msgs/sdv_msgs/msg/: Encoder.msg  NonlinearFunctions.msg  PanelMsg.msg  PerceptionMode.msg  SdvMode.msg  State.msg  Status.msg  ThrottleMsg.msg  VehicleControl.msg  VehicleInfo.msg  VehicleInfoWheel.msg  XboxMsg.msg
sdv_control_and_msgs/sdv_msgs/srv/: Uint8.srv
sensors_launch/: CMakeLists.txt  package.xml
target_waypoint_index/: CMakeLists.txt  package.xml
traffic_information_msgs/: CMakeLists.txt  package.xml
waypoints_routing/: CMakeLists.txt  package.xml
waypoints_routing/config/: params.yaml
waypoints_routing/include/: waypoints_routing.h
waypoints_routing/launch/: waypoints.launch.py
waypoints_routing/src/: waypoints_routing.cpp
(+61 files in other folders)
